--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "acierto",
+  "name": "angular-firebase-ngxs-e-commerce",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -11,17 +11,17 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~10.1.6",
+    "@angular/animations": "~10.2.0",
     "@angular/cdk": "^10.2.5",
-    "@angular/common": "~10.1.6",
-    "@angular/compiler": "~10.1.6",
-    "@angular/core": "~10.1.6",
+    "@angular/common": "~10.2.0",
+    "@angular/compiler": "~10.2.0",
+    "@angular/core": "~10.2.0",
     "@angular/fire": "^6.0.3",
-    "@angular/forms": "~10.1.6",
+    "@angular/forms": "~10.2.0",
     "@angular/material": "^10.2.5",
-    "@angular/platform-browser": "~10.1.6",
-    "@angular/platform-browser-dynamic": "~10.1.6",
-    "@angular/router": "~10.1.6",
+    "@angular/platform-browser": "~10.2.0",
+    "@angular/platform-browser-dynamic": "~10.2.0",
+    "@angular/router": "~10.2.0",
     "@ngxs/devtools-plugin": "^3.7.0",
     "@ngxs/logger-plugin": "^3.7.0",
     "@ngxs/router-plugin": "^3.7.0",
@@ -36,7 +36,7 @@
     "@angular-devkit/architect": ">= 0.900 < 0.1100",
     "@angular-devkit/build-angular": "~0.1002.0",
     "@angular/cli": "~10.2.0",
-    "@angular/compiler-cli": "~10.1.6",
+    "@angular/compiler-cli": "~10.2.0",
     "@ngxs/schematics": "^0.0.1-alpha.5",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
